➕: Added a main menu where users can choose to buy tickets or access the admin dashboard